--- a/security/roles/security_validation/tasks/validate_input_params.yml
+++ b/security/roles/security_validation/tasks/validate_input_params.yml
@@ -15,7 +15,7 @@
 
 - name: Set authentication_system, enable_secure_login_node required value
   ansible.builtin.set_fact:
-    authentication_system: {{ authentication_system | lower }}
+    authentication_system: "{{ authentication_system | lower }}"
     enable_secure_login_node: "{{ enable_secure_login_node | lower }}"
 
 - name: Print the value of authentication_system
