--- a/security/roles/ldap_server/tasks/set_domain.yml
+++ b/security/roles/ldap_server/tasks/set_domain.yml
@@ -25,6 +25,7 @@
   changed_when: false
   ignore_errors: true
   register: schema_output
+  no_log: true
 
 - name: Verify and add domain config
   when: schema_output is not search("Omnia_set_organization")
