--- a/security/roles/ldap_server/tasks/ldap_prereq.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq.yml
@@ -77,26 +77,32 @@
   delegate_to: localhost
   ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_config_root_password'] }}"
   register: password_hash
+  no_log: true
 
 - name: Set variables for OpenLDAP config password
   ansible.builtin.set_fact:
     ldaptoolbox_openldap_config_olcRootPW_hash: "{{ password_hash.stdout }}"
+  no_log: true
 
 - name: Genarate password hashes for OpenLDAP database
   delegate_to: localhost
   ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_database_root_password'] }}"
   register: password_hash
+  no_log: true
 
 - name: Set variables for OpenLDAP database password
   ansible.builtin.set_fact:
     ldaptoolbox_openldap_database_olcRootPW_hash: "{{ password_hash.stdout }}"
+  no_log: true
 
 - name: Genarate password hashes for OpenLDAP monitor
   delegate_to: localhost
   ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_monitor_root_password'] }}"
   register: password_hash
+  no_log: true
 
 - name: Set variables for OpenLDAP monitor password
   ansible.builtin.set_fact:
     ldaptoolbox_openldap_monitor_olcRootPW_hash: "{{ password_hash.stdout }}"
+  no_log: true
 
