--- a/security/roles/ldap_server/vars/main.yml
+++ b/security/roles/ldap_server/vars/main.yml
@@ -13,7 +13,7 @@
 # limitations under the License.
 ---
 
-# Usage: ldap_prereq.yml
+# Usage: ldap_prereq_Redhat.yml
 ldaptoolbox_openldap_config_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_config_root_username'] }},cn=config"
 ldaptoolbox_openldap_database_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_database_root_username'] }},{{ ldaptoolbox_openldap_suffix }}"
 ldaptoolbox_openldap_monitor_olcRootDN: "cn=monitor"
@@ -23,8 +23,13 @@ ldaptoolbox_olcPasswordHash: "{SHA}"
 openldap_configuration_mode: "0600"
 openldap_config_permissions: "0777"
 tls_cert_path: "/etc/openldap/certs/"
-cert_file: "ldapserver.crt"
-cert_key: "ldapserver.key"
+rhel_cert_file: "ldapserver.crt"
+rhel_cert_key: "ldapserver.key"
+
+# Usage: ldap_prereq_Ubuntu.yml
+deb_ca_cert_file: "ca-certificates.crt"
+deb_cert_file: "ssl-cert-snakeoil.pem"
+deb_cert_key: "ssl-cert-snakeoil.key"
 
 # Usage: set_domain.yml
 openldap_config_dest_dir: "/opt/ldap"
