--- a/security/roles/hostname_validation/tasks/validate_hostname.yml
+++ b/security/roles/hostname_validation/tasks/validate_hostname.yml
@@ -1,4 +1,4 @@
-# Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
+# Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -14,8 +14,7 @@
 ---
 
 - name: Validate hostname
-  when: hostvars['127.0.0.1']['ldap_required'] or
-        hostvars['127.0.0.1']['freeipa_required']
+  when: hostvars['127.0.0.1']['authentication_system'] == 'openldap' or hostvars['127.0.0.1']['authentication_system'] == 'freeipa'
   block:
     - name: Fetch the hostname
       ansible.builtin.command: hostname -s
