--- a/security/roles/ldap_client/vars/main.yml
+++ b/security/roles/ldap_client/vars/main.yml
@@ -13,7 +13,7 @@
 #  limitations under the License.
 ---
 
-# Usage: configre_ldap_client.yml
+# Usage: configure_ldap_client.yml
 ldap_client_packages:
   - openldap-clients
   - sssd
@@ -27,6 +27,7 @@ tls_cert_path: "/etc/openldap/certs/"
 ldap_conf_dest: "/etc/openldap/ldap.conf"
 sasl_nocanon_regxp: "SASL_NOCANON\ton"
 sasl_nacanon_replace1: "SASL_NOCANON\ton\nBASE\t{{ reqd_domain_name }}"
-sasl_nacanon_replace2: "SASL_NOCANON\ton\nURI\tldap://{{ hostvars['127.0.0.1']['ldap_server_ip'] }}"
+sasl_nacanon_replace2: "SASL_NOCANON\ton\nURI\tldap://{{ hostvars[groups['manager'][0]]['ansible_env'].SSH_CONNECTION.split(' ')[2] }}"
 sasl_nacanon_replace3: "SASL_NOCANON\ton\nTLS_CACERT\t{{ tls_cert_path }}"
-sasl_nacanon_replace4: "SASL_NOCANON\ton\nURI\tldap://{{ hostvars['127.0.0.1']['ldap_server_ip'] }}:636"
+sasl_nacanon_replace4: "SASL_NOCANON\ton\nURI\tldap://{{ hostvars[groups['manager'][0]]['ansible_env'].SSH_CONNECTION.split(' ')[2] }}:636"
+file_mode: "0644"
