--- a/security/security.yml
+++ b/security/security.yml
@@ -50,7 +50,7 @@
       ansible.builtin.include_role:
         name: hostname_validation
         tasks_from: validate_hostname.yml
-  tags: freeipa, ldap
+  tags: freeipa, ldap, test
 
 - name: Apply login common installation and config
   hosts: manager, login, compute
@@ -73,6 +73,32 @@
   roles:
     - login_node
   tags: freeipa
+
+- name: Apply ldap server installation and config
+  hosts: manager
+  roles:
+    - ldap_server
+  tags: test
+
+- name: Apply ldap server installation and config
+  remote_user: root
+  hosts: manager
+  vars:
+    - ldaptoolbox_openldap_database_olcLimits:
+         - "dn.base=gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth size=unlimited  time=unlimited"
+    # No replication
+    - ldaptoolbox_openldap_syncrepl: []
+  roles:
+    - /opt/omnia/ldap/ansible-role-ldaptoolbox-openldap
+  tags: test
+
+- name: Setup LDAP server domain
+  hosts: manager
+  tasks:
+    - name: Include domain setup task
+      ansible.builtin.include_role:
+        name: ldap_server
+        tasks_from: set_domain.yml
 
 - name: Apply ldap client installation and config
   hosts: manager, compute, login
