--- a/security/roles/ldap_server/tasks/ldap_prereq_redhat.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq_redhat.yml
@@ -46,9 +46,9 @@
 
     - name: Set default tls certificate path for LTB playbook
       ansible.builtin.set_fact:
-        ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ tls_certificates_directory_path }}/{{ rhel_cert_file }}" # noqa var-naming.capitals
-        ldaptoolbox_openldap_olcTLSCertificateFile: "{{ tls_certificates_directory_path }}/{{ rhel_cert_file }}" # noqa var-naming.capitals
-        ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ tls_certificates_directory_path }}/{{ rhel_cert_key }}" # noqa var-naming.capitals
+        ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ tls_certificates_directory_path }}/{{ rhel_cert_file }}" # noqa var-naming
+        ldaptoolbox_openldap_olcTLSCertificateFile: "{{ tls_certificates_directory_path }}/{{ rhel_cert_file }}" # noqa var-naming
+        ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ tls_certificates_directory_path }}/{{ rhel_cert_key }}" # noqa var-naming
 
 - name: Set tls certificate path for omnia playbook
   when: not default_certs
@@ -72,9 +72,9 @@
 
   - name: Set  tls certificate path for LTB playbook 
     ansible.builtin.set_fact:
-      ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['CA_Certificate_file'] | basename }}" # noqa var-naming.capitals
-      ldaptoolbox_openldap_olcTLSCertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['Certificate_file'] | basename }}" # noqa var-naming.capitals
-      ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['Certificate_key_file'] | basename }}" # noqa var-naming.capitals
+      ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['CA_Certificate_file'] | basename }}" # noqa var-naming
+      ldaptoolbox_openldap_olcTLSCertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['Certificate_file'] | basename }}" # noqa var-naming
+      ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['Certificate_key_file'] | basename }}" # noqa var-naming
 
 - name: Genarate password hash for OpenLDAP config
   delegate_to: localhost
