--- a/security/roles/ldap_server/tasks/ldap_prereq_ubuntu.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq_ubuntu.yml
@@ -50,38 +50,43 @@
 - name: Set tls certificate path for omnia playbook
   when: not default_certs
   block:
-  - name: Copy the certificate to remote node
-    ansible.builtin.copy:
-      src: "{{ item.file }}"
-      dest: "{{ tls_certificates_directory_path }}/item.directory"
-      remote_src: false
-      mode: "0644"
-    with_items:
-      - { file: "{{ hostvars['127.0.0.1']['CA_Certificate_file'] }}" , directory: certs }
-      - { file: "{{ hostvars['127.0.0.1']['Certificate_file'] }}" , directory: certs }
-      - { file: "{{ hostvars['127.0.0.1']['Certificate_key_file'] }}" , directory: private }
+    - name: Copy the certificate to remote node
+      ansible.builtin.copy:
+        src: "{{ item.file }}"
+        dest: "{{ tls_certificates_directory_path }}/item.directory"
+        remote_src: false
+        mode: "0644"
+      with_items:
+        - { file: "{{ hostvars['127.0.0.1']['CA_Certificate_file'] }}" ,directory: certs }
+        - { file: "{{ hostvars['127.0.0.1']['Certificate_file'] }}" ,directory: certs }
+        - { file: "{{ hostvars['127.0.0.1']['Certificate_key_file'] }}" ,directory: private }
 
-  - name: Copy Certificate to contol plane for client setup
-    copy:
-      src: "{{ hostvars['127.0.0.1']['CA_Certificate_file'] }}"
-      dest: "{{ tls_cert_path }}"
-    delegate_to: localhost
+    - name: Copy Certificate to contol plane for client setup
+      ansible.builtin.copy:
+        src: "{{ hostvars['127.0.0.1']['CA_Certificate_file'] }}"
+        dest: "{{ tls_cert_path }}"
+        mode: "{{ openldap_cert_permissions }}"
+      delegate_to: localhost
 
-  - name: Set  tls certificate path for LTB playbook 
-    ansible.builtin.set_fact:
-      ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['CA_Certificate_file'] | basename }}"
-      ldaptoolbox_openldap_olcTLSCertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['Certificate_file'] | basename }}"
-      ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['Certificate_key_file'] | basename }}"
+    - name: Set  tls certificate path for LTB playbook
+      ansible.builtin.set_fact:
+        ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['CA_Certificate_file']
+         | basename }}" # noqa var-naming
+        ldaptoolbox_openldap_olcTLSCertificateFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['Certificate_file']
+         | basename }}" # noqa var-naming
+        ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ tls_certificates_directory_path }}/{{ hostvars['127.0.0.1']['Certificate_key_file']
+         | basename }}" # noqa var-naming
 
 - name: Genarate password hash for OpenLDAP config
   delegate_to: localhost
   ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_config_root_password'] }}"
   register: password_hash
   no_log: true
+  changed_when: false
 
 - name: Set variables for OpenLDAP config password
   ansible.builtin.set_fact:
-    ldaptoolbox_openldap_config_olcRootPW_hash: "{{ password_hash.stdout }}"
+    ldaptoolbox_openldap_config_olcRootPW_hash: "{{ password_hash.stdout }}" # noqa var-naming
   no_log: true
 
 - name: Genarate password hashes for OpenLDAP database
@@ -89,10 +94,11 @@
   ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_database_root_password'] }}"
   register: password_hash
   no_log: true
+  changed_when: false
 
 - name: Set variables for OpenLDAP database password
   ansible.builtin.set_fact:
-    ldaptoolbox_openldap_database_olcRootPW_hash: "{{ password_hash.stdout }}"
+    ldaptoolbox_openldap_database_olcRootPW_hash: "{{ password_hash.stdout }}" # noqa var-naming
   no_log: true
 
 - name: Genarate password hashes for OpenLDAP monitor
@@ -100,9 +106,9 @@
   ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_monitor_root_password'] }}"
   register: password_hash
   no_log: true
+  changed_when: false
 
 - name: Set variables for OpenLDAP monitor password
   ansible.builtin.set_fact:
-    ldaptoolbox_openldap_monitor_olcRootPW_hash: "{{ password_hash.stdout }}"
+    ldaptoolbox_openldap_monitor_olcRootPW_hash: "{{ password_hash.stdout }}" # noqa var-naming
   no_log: true
-
