--- a/security/roles/security_validation/tasks/fetch_ldap_server_input.yml
+++ b/security/roles/security_validation/tasks/fetch_ldap_server_input.yml
@@ -13,6 +13,10 @@
 # limitations under the License.
 ---
 
+- name: Set variables for LYB role path
+  ansible.builtin.set_fact:
+  ltb_repo_path: "/opt/omnia/ldap/ansible-role-ldaptoolbox-openldap"
+
 - name: Assert openldap_config_root_password
   ansible.builtin.assert:
     that:
