--- a/security/security.yml
+++ b/security/security.yml
@@ -82,13 +82,8 @@
 - name: Apply ldap server installation and config
   remote_user: root
   hosts: manager
-  vars:
-    - ldaptoolbox_openldap_database_olcLimits:
-        - "dn.base=gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth size=unlimited  time=unlimited"
-    # No replication
-    - ldaptoolbox_openldap_syncrepl: []
   roles:
-    - /opt/omnia/ldap/ansible-role-ldaptoolbox-openldap # noqa: role-name[path]
+    - "{{ ltb_repo_path }}" # noqa: role-name[path]
 
 - name: Setup LDAP server domain
   hosts: manager
