--- a/security/roles/ldap_server/vars/main.yml
+++ b/security/roles/ldap_server/vars/main.yml
@@ -26,7 +26,7 @@ openldap_cert_permissions: "0644"
 tls_cert_path: "/etc/openldap/certs/"
 rhel_cert_file: "ldapserver.crt"
 rhel_cert_key: "ldapserver.key"
-ldaptoolbox_openldap_database_olcLimits:
+ldaptoolbox_openldap_database_olcLimits: # noqa var-naming
         - "dn.base=gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth size=unlimited  time=unlimited"
 # No replication (Always keep empty)
 ldaptoolbox_openldap_syncrepl: []
