--- a/security/roles/login_node/tasks/check_prerequisites.yml
+++ b/security/roles/login_node/tasks/check_prerequisites.yml
@@ -20,7 +20,7 @@
 - name: Check freeipa ui accessible or not
   ansible.builtin.uri:
     url: "https://{{ hostvars[groups['manager'][0]]['server_hostname'] }}"
-    status_code: "{{ return_status }}"
+    status_code: "{{ return_status | int}}"
     return_content: true
   register: freeipa_url_status
   failed_when: false
