--- a/security/security.yml
+++ b/security/security.yml
@@ -60,19 +60,19 @@
     - login_common
   tags: freeipa
 
-- name: Apply login server installation and config
-  hosts: manager
-  gather_facts: false
-  roles:
-    - login_server
-  tags: freeipa
+# - name: Apply login server installation and config
+#   hosts: manager
+#   gather_facts: false
+#   roles:
+#     - login_server
+#   tags: freeipa
 
-- name: Install FreeIPA client on login and compute nodes
-  hosts: login, compute
-  gather_facts: false
-  roles:
-    - login_node
-  tags: freeipa
+# - name: Install FreeIPA client on login and compute nodes
+#   hosts: login, compute
+#   gather_facts: false
+#   roles:
+#     - login_node
+#   tags: freeipa
 
 - name: Apply ldap server installation and config
   hosts: manager
