--- a/security/roles/security_validation/tasks/fetch_ldap_server_input.yml
+++ b/security/roles/security_validation/tasks/fetch_ldap_server_input.yml
@@ -17,6 +17,16 @@
   ansible.builtin.set_fact:
     ltb_repo_path: "/opt/omnia/ldap/ansible-role-ldaptoolbox-openldap"
 
+- name: Check certificate files exist
+  ansible.builtin.stat:
+    path: "{{ ltb_repo_path }}"
+  register: file_status
+
+- name: Fail if LTB role directory doesn't exist
+  ansible.builtin.fail:
+    msg: "{{ fail_msg_config_file }}"
+  when: not stat_result.stat.exists
+
 - name: Assert openldap_config_root_password
   ansible.builtin.assert:
     that:
