--- a/security/roles/security_validation/tasks/fetch_ldap_server_input.yml
+++ b/security/roles/security_validation/tasks/fetch_ldap_server_input.yml
@@ -20,12 +20,12 @@
 - name: Check certificate files exist
   ansible.builtin.stat:
     path: "{{ ltb_repo_path }}"
-  register: file_status
+  register: dir_status
 
 - name: Fail if LTB role directory doesn't exist
   ansible.builtin.fail:
-    msg: "{{ fail_msg_config_file }}"
-  when: not stat_result.stat.exists
+    msg: "{{ fail_msg_ltb_dir }}"
+  when: not dir_status.stat.exists
 
 - name: Assert openldap_config_root_password
   ansible.builtin.assert:
