--- a/security/roles/security_validation/vars/main.yml
+++ b/security/roles/security_validation/vars/main.yml
@@ -96,3 +96,4 @@ success_msg_monitor_root_password: "Monitor password valid"
 fail_msg_monitor_root_password: "Monitor password invalid"
 ldap_cert_path_fail_msg: "Failed, LDAP certificate path doesn't exist."
 ldap_cert_path_success_msg: "LDAP certificate path validated"
+fail_msg_ltb_dir: "Failed, LTB directory doesn't exist."
