--- a/security/roles/ldap_server/tasks/ldap_prereq_ubuntu.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq_ubuntu.yml
@@ -15,6 +15,9 @@
 
 - name: Set variables for OpenLDAP
   ansible.builtin.set_fact:
+    ldaptoolbox_openldap_database_olcLimits: # noqa var-naming
+      - "dn.base=gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth size=unlimited  time=unlimited"
+    ldaptoolbox_openldap_syncrepl: []
     ldaptoolbox_openldap_suffix: "{{ (hostvars['127.0.0.1']['domain_name'].split('.') | map('regex_replace', '^', 'dc=') | list) | join(',') }}"
     tls_certificates_directory_path: "/etc/ssl/"
     default_certs: false
