--- a/security/roles/ldap_server/tasks/set_domain.yml
+++ b/security/roles/ldap_server/tasks/set_domain.yml
@@ -28,7 +28,7 @@
   no_log: true
 
 - name: Verify and add domain config
-  when: schema_output is not search("{{ schema_search_string }}")
+  when: schema_output is not search(schema_search_string)
   block:
     - name: Create ldap config directory
       ansible.builtin.file:
